objects/Call_Result_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Call Result Details</relationshipLabel>
        <relationshipName>R00N80000002YSzqEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Call Result Details</relationshipLabel>
        <relationshipName>R00N80000002YXPjEAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if task associated task has been processed by apex</description>
        <label>Task Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Status__c</fullName>
        <label>Call Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LVM for Target</fullName>
                </value>
                <value>
                    <fullName>LVM for Exec. Assistant</fullName>
                </value>
                <value>
                    <fullName>LVM for Attendant</fullName>
                </value>
                <value>
                    <fullName>NVM</fullName>
                </value>
                <value>
                    <fullName>Connected with Target</fullName>
                </value>
                <value>
                    <fullName>Connected with Executive Assistant</fullName>
                </value>
                <value>
                    <fullName>Connected with Attendant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Call Result Details</relationshipLabel>
        <relationshipName>R00N80000002YT0JEAW</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <description>Comments and Status for PerfectCall Dialing Campaigns</description>
    <label>Call Result Detail</label>
    <nameField>
        <displayFormat>PC_RD_{000000000}</displayFormat>
        <label>Call Result Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Result Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>